--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,7 +2,7 @@
   "name": "frontend",
   "version": "0.1.0",
   "versionSystem": "5.0.0",
-  "nomeEmpresa": "appBot",
+  "nomeEmpresa": "WhatiSac",
   "private": true,
   "dependencies": {
     "@date-io/date-fns": "^2.14.0",
