--- a/backend/.env.example
+++ b/backend/.env.example
@@ -23,7 +23,7 @@ CONNECTIONS_LIMIT=100000
 CLOSED_SEND_BY_ME=true
 
 GERENCIANET_SANDBOX=false
-GERENCIANET_CLIENT_ID=Client_Id_Gerencianet
-GERENCIANET_CLIENT_SECRET=Client_Secret_Gerencianet
-GERENCIANET_PIX_CERT=certificado-Gerencianet
-GERENCIANET_PIX_KEY=chave pix gerencianet
+GERENCIANET_CLIENT_ID=Client_Id_e0d8d0b1e2d573ceb7c7cd18fdeb4a6420673902
+GERENCIANET_CLIENT_SECRET=Client_Secret_932c3c40b73fcd1082949aad926da5d944d67126
+GERENCIANET_PIX_CERT=producao-108642-WHATISAC.p12
+GERENCIANET_PIX_KEY=a19a4d3d-dd86-473e-930e-87f71503df93
