--- a/backend/.env.example
+++ b/backend/.env.example
@@ -23,7 +23,7 @@ CONNECTIONS_LIMIT=100000
 CLOSED_SEND_BY_ME=true
 
 GERENCIANET_SANDBOX=false
-GERENCIANET_CLIENT_ID=Client_Id_5c0af7c051bf205997cae41e02f9972d539625b7
-GERENCIANET_CLIENT_SECRET=Client_Secret_dad7562283761bef2705809ba0f89aadb56c2066
-GERENCIANET_PIX_CERT=producao-108642-wsac
-GERENCIANET_PIX_KEY=a19a4d3d-dd86-473e-930e-87f71503df93
+GERENCIANET_CLIENT_ID=Client_Id_Gerencianet
+GERENCIANET_CLIENT_SECRET=Client_Secret_Gerencianet
+GERENCIANET_PIX_CERT=certificado-Gerencianet
+GERENCIANET_PIX_KEY=chave pix gerencianet
